projects/instavote/dev/lab/configmaplab2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: labpod
  namespace: test
  labels:
    role: configmappod
spec:
  containers:
    - name: config-test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "echo $(SALT) $(STATE) $(API)" ]
  restartPolicy: Never
