projects/instavote/dev/lab/configmaplab4.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: configmaplab4pod
  namespace: test
  labels:
    type: testpod
spec:
  containers:
    - name: secret-test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "ping" ,"localhost" ]
      volumeMounts:
        - name: configmapsecretvol
          mountPath: /etc/mongoCreds 
  volumes:
    - name: configmapsecretvol
      secret:
        secretName: configmaplab3secret
