projects/instavote/dev/lab/ingresslab1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: test
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - image: schoolofdevops/frontend:latest
        imagePullPolicy: Always
        name: front-end
        ports:
        - containerPort: 8079
          protocol: TCP
