projects/instavote/dev/lab/ingresslab1-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: frontendsvc
  namespace: test
  labels:
    app: front-end
spec:
  type: NodePort
  selector:
      app: front-end
  ports:
    - port: 80
      targetPort: 9541
      nodePort: 31756
